2006-06-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/mutopia-vars.make (ly_examples): remove .txt from .ly.txt

	* make/mutopia-rules.make ($(outdir)/%.ly): eliminate duplicate recipe.

	* tex/texinfo.tex (sectionheading, q.v.): \quoteexpand for
	@example

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-ps.scm (output-framework): start system count at 1.

	* scm/stencil.scm (write-system-signature): escape
	newlines. Output empty stencils as (1,-1)

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
	$(outdir)/%.ly $(outdir)/%.ps): dump sigs for normal files too.

	* stepmake/aclocal.m4: robuster version detection.

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (tree-lib-prefix-current):
	(tree-share-prefix-current): Use version number in tree, add
	`current' symlinks.

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Robustification for (gcc) version detection.
	Another datarootdir reto.

	* cygwin/postinstall-lilypond.sh: Do not fail if info docs aren't
	available.  This should be moved to postinstall-lilypond-doc.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): only
	create new spanner for non-null left bounded staff symbol.
	
	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.

2006-05-31  Erlend Aasland  <erlenda@gmail.com>

	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
	version number.
	(PREAMBLE_LY): copy from -devel branch.

	* VERSION (PATCH_LEVEL): bump to .4

	* lily/parser.yy (simple_markup): replace THIS with PARSER.

	* ly/Welcome-to-LilyPond-MacOS.ly: include in LilyPond, so version
	number stays up to date.
	
	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): new routine: summarise
	results in HTML page with images. 